--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -10,11 +10,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Finance">
         <activity
-            android:name=".HomeActivity"
+            android:name=".DetailsActivity"
             android:exported="true" />
         <activity
-            android:name=".FireBaseActivity"
+            android:name=".HomeActivity"
             android:exported="true" />
+
         <activity
             android:name=".LogInActivity"
             android:exported="true" />
